--- a/client/src/shared/theme/font.css
+++ b/client/src/shared/theme/font.css
@@ -91,6 +91,7 @@ h3 {
 
 h3.subheader {
     margin-top: 0;
+    margin-bottom: 0;
     font-size: var(--font-size-small);
     font-weight: var(--font-weight-normal);
     color: var(--ion-color-medium);
@@ -103,6 +104,7 @@ h4 {
 
 h4.subheader {
     margin-top: 0;
+    margin-bottom: 0;
     font-size: var(--font-size-small);
     font-weight: var(--font-weight-normal);
     color: var(--ion-color-medium);
@@ -115,6 +117,7 @@ h5 {
 
 h5.subheader {
     margin-top: 0;
+    margin-bottom: 0;
     font-size: var(--font-size-smaller);
     font-weight: var(--font-weight-normal);
     color: var(--ion-color-medium);
