--- a/client/src/shared/theme/transitions.css
+++ b/client/src/shared/theme/transitions.css
@@ -30,11 +30,11 @@
 
 /********* Fade *********/
 .fade-enter-active {
-    transition: all 0.3s ease-out;
+    transition: all 0.5s ease-in-out;
 }
 
 .fade-leave-active {
-    transition: all 0.8s cubic-bezier(1, 0.5, 0.8, 1);
+    transition: all 0.8s ease-in-out;
 }
 
 .fade-enter-from,
