Update client to be compatible with new server

--- a/client/src/shared/theme/font.css
+++ b/client/src/shared/theme/font.css
@@ -140,3 +140,7 @@ h5.subheader {
     color: var(--ion-color-primary);
     font-weight: var(--font-weight-bold);
 }
+
+.highlight.secondary {
+    color: var(--ion-color-secondary);
+}
