--- a/client/src/shared/theme/global.css
+++ b/client/src/shared/theme/global.css
@@ -26,6 +26,7 @@
     /* border */
     --border-radius-small: 10px;
     --border-radius: 15px;
+    --border-radius-chip: 20px;
     --border-radius-strong: 25px;
     --border-radius-round: 100%;
     --border: thin solid var(--ion-color-light-shade) !important;
